# zfx-tezos-client

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  network_failure.txt  package-lock.json  webpack.config.js
examples/: example.rs  full_example.rs
examples/counter_contract/: contract.mligo  main.rs
examples/register_contract/: main.rs  register.mligo
src/: bridge.rs  lib.rs  main.rs  package-lock.json  package.json  prelude.rs  tezos_js_bridge.js  types.rs
