[package]
name = "zfx-tezos-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.12.0" }
clap = "2.33.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full", "io-util"] }
# tokio-util = { version = "0.6", features = ["codec"] }
zfx-michelson = { git = "https://github.com/zfxlabs/zfx-michelson", branch = "expression_class" }